Fix fetch call, add scrollbar to index divs

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -38,13 +38,14 @@ html, body {
  }
 
  .index {
-   height: 100%;
+   height: 500px;
+   overflow-y: auto;
  }
 
  .entry {
    padding-left: 20px;
    padding-top: 1px;
-   padding-bottom: 1px;
+   padding-bottom: 10px;
    background-color: #FCFEB0;
    box-shadow: 0 0 5px #000;
    width: 90%;
